# excel-api

./: README.md  pyproject.toml  requirements.txt
src/excel_api/: main.py
src/excel_api/api/: __init__.py  router.py
src/excel_api/api/v1/uploading/: __init__.py  router.py
src/excel_api/core/: arg_parser.py  log.py  registarar.py  server.py
src/excel_api/schemas/: response_schema.py
src/excel_api/service/: upload_service.py
tests/: test_main.py
